Fix for CSS bug: info box was too small.

--- a/css/hcmc_ol.css
+++ b/css/hcmc_ol.css
@@ -328,7 +328,7 @@ div#holInfo{
   overflow: auto;  
   margin: 0;
   flex: 2;
-  flex-shrink: 2;
+  flex-shrink: 0;
   box-sizing: border-box;
   background-color: rgba(255, 255, 255, 1);
   border-radius: 0 0 5px 5px;
